[package]
name = "epaint"
version = "0.18.1"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Minimal 2D graphics library for GUI work"
edition = "2021"
rust-version = "1.60"
homepage = "https://github.com/emilk/egui/tree/master/epaint"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/master/epaint"
categories = ["graphics", "gui"]
keywords = ["graphics", "gui", "egui"]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
  "fonts/*.ttf",
  "fonts/*.txt",
]

[package.metadata.docs.rs]
all-features = true

[lib]


[features]
default = ["default_fonts"]

# implement bytemuck on most types.
bytemuck = ["dep:bytemuck", "emath/bytemuck"]

# This will automatically detect deadlocks due to double-locking on the same thread.
# If your app freezes, you may want to enable this!
# Only affects `epaint::mutex::RwLock` (which epaint and egui uses a lot).
deadlock_detection = ["dep:backtrace"]

# If set, epaint will use `include_bytes!` to bundle some fonts.
# If you plan on specifying your own fonts you may disable this feature.
default_fonts = []

# Enable additional checks if debug assertions are enabled (debug builds).
extra_debug_asserts = ["emath/extra_debug_asserts"]
# Always enable additional checks.
extra_asserts = ["emath/extra_asserts"]

# Add compatability with https://github.com/kvark/mint
mint = ["emath/mint"]

# implement serde on most types.
serde = ["dep:serde", "ahash/serde", "emath/serde"]

system_fonts = ["skia-safe"]

[dependencies]
emath = { version = "0.18.0", path = "../emath" }

ab_glyph = "0.2.11"
ahash = { version = "0.7", default-features = false, features = ["std"] }
nohash-hasher = "0.2"

# Optional:
bytemuck = { version = "1.7.2", optional = true, features = ["derive"] }
cint = { version = "0.3.1", optional = true }
color-hex = { version = "0.2.0", optional = true }
serde = { version = "1", optional = true, features = ["derive", "rc"] }

skia-safe = {version = "0.49.1", optional = true, features = ["gl"]}

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
backtrace = { version = "0.3", optional = true }
parking_lot = "0.12" # Using parking_lot over std::sync::Mutex gives 50% speedups in some real-world scenarios.

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
atomic_refcell = "0.1" # Used instead of parking_lot on on wasm. See https://github.com/emilk/egui/issues/1401


[dev-dependencies]
criterion = { version = "0.3", default-features = false }


[[bench]]
name = "benchmark"
harness = false
