[package]
name = "epi"
version = "0.13.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Backend-agnostic interface for writing apps using egui"
edition = "2018"
homepage = "https://github.com/emilk/egui"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/egui"
categories = ["gui", "game-development"]
keywords = ["egui", "gui", "gamedev"]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[lib]

[dependencies]
egui = { version = "0.13.0", path = "../egui", default-features = false, features = ["single_threaded"] }
ron = { version = "0.6", optional = true }
serde = { version = "1", optional = true }

[features]
default = []
http = []
persistence = ["ron", "serde"]
