[package]
name = "epi"
version = "0.16.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Backend-agnostic interface for writing apps using egui"
edition = "2021"
rust-version = "1.56"
homepage = "https://github.com/emilk/egui/tree/master/epi"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/master/epi"
categories = ["gui", "game-development"]
keywords = ["egui", "gui", "gamedev"]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[lib]

[dependencies]
egui = { version = "0.16.0", path = "../egui", default-features = false, features = ["single_threaded"] }

directories-next = { version = "2", optional = true }
ron = { version = "0.7", optional = true }
serde = { version = "1", optional = true }

[features]
default = []
file_storage = ["directories-next", "ron", "serde"]
persistence = ["ron", "serde"]
