[package]
name = "epi"
version = "0.17.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Backend-agnostic interface for writing apps using egui"
edition = "2021"
rust-version = "1.56"
homepage = "https://github.com/emilk/egui/tree/master/epi"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/master/epi"
categories = ["gui", "game-development"]
keywords = ["egui", "gui", "gamedev"]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[lib]


[features]
default = []
# Enable the file_storage module for storing data to disk.
file_storage = ["directories-next", "ron", "serde"]
# Persist native window options and egui memory
persistence = ["ron", "serde", "egui/persistence"]


[dependencies]
egui = { version = "0.17.0", path = "../egui", default-features = false, features = ["single_threaded"] }
tracing = "0.1"

directories-next = { version = "2", optional = true }
ron = { version = "0.7", optional = true }
serde = { version = "1", optional = true }
