[package]
name = "epi_http"
version = "0.10.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Bindings for compiling egui code to WASM for a web page"
license = "MIT OR Apache-2.0"
edition = "2018"
homepage = "https://github.com/emilk/egui"
readme = "README.md"
repository = "https://github.com/emilk/egui"
categories = ["gui", "web-programming"]
keywords = ["wasm", "web", "egui", "gui", "gamedev"]
include = [
    "**/*.rs",
    "Cargo.toml",
]
[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
wasm=["js-sys","wasm-bindgen","wasm-bindgen-futures"]
native=["ureq"]
[dependencies]
#common
epi = { version = "0.10.0", path = "../epi",features=["http"] }
#wasm
js-sys = {version="0.3",optional=true}
wasm-bindgen = {version="0.2",optional=true}
wasm-bindgen-futures = {version="0.4",optional=true}
#native
ureq ={version="2",optional=true}
#wasm
[dependencies.web-sys]
version = "0.3"
features=["Headers","Request","RequestInit","RequestMode","Response"]