[package]
name = "example_glium"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
#egui = { git = "https://github.com/emilk/emigui" }
egui = { path = "../egui" }
#egui_glium = { git = "https://github.com/emilk/emigui" }
egui_glium = { path = "../egui_glium" }
serde = { version = "1", features = ["derive"] }
