[package]
name = "example_wasm"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emilernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
wasm-bindgen = "0.2"

emigui = { path = "../emigui" }
emigui_wasm = { path = "../emigui_wasm" }
